--- a/app/views/admin/shared/_header.html.erb
+++ b/app/views/admin/shared/_header.html.erb
@@ -9,7 +9,7 @@
   <!-- Right navbar links -->
   <ul class='navbar-nav ml-auto'>
     <li class='nav-item'>
-      <%= link_to 'ログアウト', admin_logout_path, class: 'nav-link', method: :post %>
+      <%= link_to 'ログアウト', admin_logout_path, class: 'nav-link', method: :delete %>
     </li>
   </ul>
 </nav>
