--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -30,8 +30,6 @@
         </p>
       </div>
     <% end %>
-    <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-    <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
     <script type="text/javascript">
       $(function () {
         $('[data-toggle="tooltip"]').tooltip();
@@ -51,5 +49,32 @@
         });
     </script>
 </div>
+  </div>
+</div>
+<div class="features">
+  <div class="container">
+    <div class="section-title text-center">
+      <h1 class="title">Want Moviesとは</h1>
+        <h4 class="title">こんな企画の動画があったら見たいな！こういう動画が見たいから誰か作ってみて欲しい！動画特化型のリクエストサービスです。</h4>
+          <div class="row">
+            <div class="feature text-center col-md-4 col-sm-6">
+              <i class="fas fa-eye feature-icon" style="font-size:50px;"></i>
+                <h3 class='feature-title'>一目で動画制作の参考になるネタがわかる！</h3>
+                  <p> ✔	動画の製作者側から見ればネタの宝庫でバズりそうな動画もいいね数で一目瞭然</p>
+            </div>
+
+            <div class="feature text-center col-md-4 col-sm-6">
+              <i class="fas fa-check-square feature-icon" style="font-size:50px;"></i>
+                <h3 class='feature-title'>いつでもどこでも思いついたら手軽に投稿</h3>
+                <p> ✔	SNSに投稿する感覚で独り言のように「こんな動画見たいな〜」と投稿できる</p>
+            </div>
+
+            <div class="feature text-center col-md-4 col-sm-6">
+              <i class="fas fa-users feature-icon" style="font-size:50px;"></i>
+              <h3 class='feature-title'>誰でもバズり動画のプロデューサーに！</h3>
+              <p> ✔	自分のリクエストが採用されて動画としてバズれば一流プロデューサーの仲間入り</p>
+            </div>
+      </div>
+    </div>
   </div>
 </div>
