--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,15 @@
     <%= javascript_include_tag 'application' %>
   </head>
   <body>
+  <div class="background">
     <% if logged_in? %>
       <%= render 'shared/header' %>
     <% else %>
       <%= render 'shared/before_login_header' %>
     <% end %>
     <%= render 'shared/flash_message' %>
-    <%= yield %>
+      <%= yield %>
     <%= render 'shared/footer' %>
+  </div>
   </body>
 </html>
