--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,4 +1,4 @@
-<div class='board_background col-sm-12 col-md-6 col-lg-4 mb-3'>
+<div class='col-sm-12 col-md-6 col-lg-4 mb-3'>
   <div id=<%= "product-id-#{board.id}" %>>
     <div class='card'>
       　<%= image_tag board.board_image_url, class: 'card-img-top', size: '300x200' %>
